# network_logger

./: .gitignore  README.md  calculate_downtime.py  email_poller.py  email_template.ttp  main.py  pyproject.toml  service_logs.txt  test_main.py
read_emails/: provider_email copy 2.txt
