[tool.poetry]
name = "packetfabric"
version = "0.1.0"
description = ""
authors = ["nonstdout <csalisbury@rocketmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ttp = "^0.9.2"
fastapi = {extras = ["all"], version = "^0.89.1"}
mock = "^5.0.1"
requests = "^2.28.2"
pymongo = "^4.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
